--- a/config/hotspot.config
+++ b/config/hotspot.config
@@ -13,7 +13,8 @@
 #
 
 # Add distributions here (names come from the distro privider at Docker Hub
-OS: alpine focal jammy centos ubi9-minimal windowsservercore-1809 nanoserver-1809 windowsservercore-ltsc2022 nanoserver-ltsc2022
+#OS: alpine focal jammy centos ubi9-minimal windowsservercore-1809 nanoserver-1809 windowsservercore-ltsc2022 nanoserver-ltsc2022
+OS: alpine  centos
 Versions: 8 11 17 19
 
 #
