modify  dockerfile update  5minites

--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -1,12 +1,9 @@
 name: Dockerfile Updater
 on:
-  push:
-    branches:
-      - 'master'
-#  workflow_dispatch:
-#  schedule:
-#    # Runs every half hour
-#    - cron: "*/30 * * * *"
+  workflow_dispatch:
+  schedule:
+    # Runs every half hour
+    - cron: "*/5 * * * *"
 
 permissions:
   contents: read
