modify  github jiamiao442

--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     # Runs every 10 minites
-    - cron: "*/10 * * * *"
+    - cron: "*/10 */10 * * *"
 
 permissions:
   contents: read
