update updater.yml on push envent

--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -1,9 +1,12 @@
 name: Dockerfile Updater
 on:
   workflow_dispatch:
-  schedule:
-    # Runs every 10 minites
-    - cron: "*/10 */10 * * *"
+#  schedule:
+#    # Runs every 10 minites
+#    - cron: "*/10 */10 * * *"
+  push:
+    branches:
+      - 'master'
 
 permissions:
   contents: read
