--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -1,12 +1,12 @@
 name: Dockerfile Updater
 on:
-  workflow_dispatch:
+#  workflow_dispatch:
 #  schedule:
 #    # Runs every 10 minites
 #    - cron: "*/10 */10 * * *"
   push:
     branches:
-      - 'master'
+      - 'main'
 
 permissions:
   contents: read
